Update command data for Kia/Stinger

--- a/tests/test_cases/2018/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2018/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: 13
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 15.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 13
     KIA_TEMP_INT: 15.5
     KIA_VSS: 23
@@ -12,6 +18,12 @@ test_cases:
     7BB2410392DFFFF1780
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
+    KIA_HVAC_IAT: 16
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 16
     KIA_VSS: 58
@@ -23,6 +35,12 @@ test_cases:
     7BB2410332DFFFF3A82
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 15.5
+    KIA_HVAC_EVAPORATOR_T: 14.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
+    KIA_HVAC_IAT: 16.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 15.5
     KIA_TEMP_INT: 16.5
     KIA_VSS: 26
@@ -34,6 +52,12 @@ test_cases:
     7BB24EE232DFFFF1A74
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 15.5
+    KIA_HVAC_EVAPORATOR_T: 14.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
+    KIA_HVAC_IAT: 16.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 15.5
     KIA_TEMP_INT: 16.5
     KIA_VSS: 0
@@ -45,6 +69,12 @@ test_cases:
     7BB24EE1F2DFFFF0061
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 18.5
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 25
+    KIA_HVAC_IAT: 18
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 18.5
     KIA_TEMP_INT: 18
     KIA_VSS: 0
@@ -56,6 +86,12 @@ test_cases:
     7BB242319D6FFFF0085
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 20.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 20
+    KIA_HVAC_IAT: 18
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 20.5
     KIA_TEMP_INT: 18
     KIA_VSS: 0
@@ -67,6 +103,12 @@ test_cases:
     7BB241014F1FFFF009A
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 26
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 26
     KIA_TEMP_INT: 18.5
     KIA_VSS: 95
@@ -78,6 +120,12 @@ test_cases:
     7BB241015F0FFFF5FC3
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 26.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 22
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 26.5
     KIA_TEMP_INT: 18.5
     KIA_VSS: 0
@@ -89,6 +137,12 @@ test_cases:
     7BB241016F2FFFF00C4
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 21
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 21
     KIA_TEMP_INT: 19
     KIA_VSS: 107
@@ -100,6 +154,12 @@ test_cases:
     7BB241015F1FFFF6BB4
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 28.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 22
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 28.5
     KIA_TEMP_INT: 19
     KIA_VSS: 94
@@ -111,6 +171,12 @@ test_cases:
     7BB241016EAFFFF5EC6
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 30.5
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 18
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30.5
     KIA_TEMP_INT: 19
     KIA_VSS: 104
@@ -122,6 +188,12 @@ test_cases:
     7BB241012F1FFFF68C5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 31
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 17
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31
     KIA_TEMP_INT: 19
     KIA_VSS: 103
@@ -133,6 +205,12 @@ test_cases:
     7BB241011F1FFFF67C2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 13
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 60
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 13
     KIA_TEMP_INT: 19.5
     KIA_VSS: 111
@@ -144,6 +222,12 @@ test_cases:
     7BB24103C2CFFFF6FB2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 24
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 24
+    KIA_HVAC_IAT: 20
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 24
     KIA_TEMP_INT: 20
     KIA_VSS: 89
@@ -155,6 +239,12 @@ test_cases:
     7BB241018F4FFFF59C5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 30
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 12
+    KIA_HVAC_IAT: 20
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30
     KIA_TEMP_INT: 20
     KIA_VSS: 0
@@ -166,6 +256,12 @@ test_cases:
     7BB24100CF1FFFF00C5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 28.5
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 17
+    KIA_HVAC_IAT: 21.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 28.5
     KIA_TEMP_INT: 21.5
     KIA_VSS: 73
@@ -177,6 +273,12 @@ test_cases:
     7BB241011F1FFFF49C5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 23
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
+    KIA_HVAC_IAT: 22
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23
     KIA_TEMP_INT: 22
     KIA_VSS: 11
@@ -188,6 +290,12 @@ test_cases:
     7BB24EE22F3FFFF0BC5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 23.5
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
+    KIA_HVAC_IAT: 22.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23.5
     KIA_TEMP_INT: 22.5
     KIA_VSS: 157
@@ -199,6 +307,12 @@ test_cases:
     7BB24101EEFFFFF9DB7
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 31.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 6
+    KIA_HVAC_IAT: 23
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31.5
     KIA_TEMP_INT: 23
     KIA_VSS: 0
@@ -210,6 +324,12 @@ test_cases:
     7BB241006EFFFFF00BE
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 35.5
+    KIA_HVAC_EVAPORATOR_T: 1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 12
+    KIA_HVAC_IAT: 23
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 35.5
     KIA_TEMP_INT: 23
     KIA_VSS: 42
@@ -221,6 +341,12 @@ test_cases:
     7BB24100CF7FFFF2ABF
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 30.5
+    KIA_HVAC_EVAPORATOR_T: 7
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 17
@@ -232,6 +358,12 @@ test_cases:
     7BB2410232EFFFF11C0
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 32
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32
     KIA_TEMP_INT: 23.5
     KIA_VSS: 0
@@ -243,6 +375,12 @@ test_cases:
     7BB242209F2FFFF00C2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 21.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 25
+    KIA_HVAC_IAT: 24
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 21.5
     KIA_TEMP_INT: 24
     KIA_VSS: 102
@@ -254,6 +392,12 @@ test_cases:
     7BB241019D2FFFF66CA
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 18
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 16
+    KIA_HVAC_IAT: 25
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 18
     KIA_TEMP_INT: 25
     KIA_VSS: 0
@@ -265,6 +409,12 @@ test_cases:
     7BB241010ECFFFF00AB
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 23.5
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 76
+    KIA_HVAC_IAT: 26.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23.5
     KIA_TEMP_INT: 26.5
     KIA_VSS: 90
@@ -276,6 +426,12 @@ test_cases:
     7BB24104CF6FFFF5AC2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 35
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
+    KIA_HVAC_IAT: 27.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 35
     KIA_TEMP_INT: 27.5
     KIA_VSS: 70
@@ -287,6 +443,12 @@ test_cases:
     7BB24220BEEFFFF46BE
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 29
+    KIA_HVAC_EVAPORATOR_T: 13
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
+    KIA_HVAC_IAT: 35
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29
     KIA_TEMP_INT: 35
     KIA_VSS: 9
@@ -298,6 +460,12 @@ test_cases:
     7BB243A28F5FFFF09AE
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 31.5
+    KIA_HVAC_EVAPORATOR_T: 36.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 39
+    KIA_HVAC_IAT: 46
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31.5
     KIA_TEMP_INT: 46
     KIA_VSS: 7
@@ -309,6 +477,12 @@ test_cases:
     7BB241027F0FFFF077D
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 34.5
+    KIA_HVAC_EVAPORATOR_T: 17.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 13
+    KIA_HVAC_IAT: 49.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 34.5
     KIA_TEMP_INT: 49.5
     KIA_VSS: 9
