--- a/tests/test_cases/2018/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2018/commands/7D4.7DC.220101.yaml
@@ -4,6 +4,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101757300
     7DC21FFDA0000000000
@@ -12,6 +14,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 84
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101797700
     7DC21FFA80000000000
@@ -20,6 +24,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 3.11
     KIA_BMS_SOC: 15.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 31.1
   response: |-
     7DC10126201017977FE
     7DC21001F0000013702
@@ -28,6 +34,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 64.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017977FF
     7DC2100810000000000
@@ -36,6 +44,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.02
     KIA_BMS_DISCHG_PWR: 0.99
     KIA_BMS_SOC: 7
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 9.9
   response: |-
     7DC10126201017A7900
     7DC21000E0002006303
@@ -44,6 +54,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.23
     KIA_BMS_DISCHG_PWR: 7.95
     KIA_BMS_SOC: 57.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 79.5
   response: |-
     7DC10126201017A7905
     7DC210073FFF3031B01
@@ -52,6 +64,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.06
     KIA_BMS_DISCHG_PWR: 0.49
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 4.9
   response: |-
     7DC10126201017B7900
     7DC21FFFC0006003101
@@ -60,6 +74,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0.79
     KIA_BMS_SOC: 1
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 7.9
   response: |-
     7DC10126201017B79FA
     7DC2100020000004F03
@@ -68,6 +84,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.25
     KIA_BMS_DISCHG_PWR: 0.95
     KIA_BMS_SOC: 8
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 9.5
   response: |-
     7DC10126201017B79FD
     7DC2100100019005F03
@@ -76,6 +94,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 43.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017C0000
     7DC2100570000000000
@@ -84,6 +104,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 10.24
     KIA_BMS_SOC: 17.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 102.4
   response: |-
     7DC10126201017C7BF6
     7DC2100230000040000
@@ -92,6 +114,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.01
     KIA_BMS_DISCHG_PWR: 6.17
     KIA_BMS_SOC: 7.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 61.7
   response: |-
     7DC10126201017D7BFB
     7DC21000FFFDD026904
@@ -100,6 +124,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 17
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101800000
     7DC21FFE80000000000
@@ -108,6 +134,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 1.28
     KIA_BMS_SOC: 14
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 12.8
   response: |-
     7DC1012620101807E02
     7DC21001C0000008004
@@ -116,6 +144,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.02
     KIA_BMS_DISCHG_PWR: 654.09
     KIA_BMS_SOC: 8.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -12.7
   response: |-
     7DC1012620101817EFE
     7DC2100110002FF8105
@@ -124,6 +154,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.47
     KIA_BMS_DISCHG_PWR: 653.56
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -18
   response: |-
     7DC1012620101838102
     7DC21FFEF002FFF4C02
@@ -132,6 +164,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 43
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201018F8D00
     7DC21FF560000000000
@@ -140,6 +174,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.13
     KIA_BMS_DISCHG_PWR: 1.55
     KIA_BMS_SOC: 11.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 15.5
   response: |-
     7DC10126201018F8D05
     7DC210017000D009B06
@@ -148,6 +184,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0.55
     KIA_BMS_SOC: 7
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 5.5
   response: |-
     7DC1012620101959300
     7DC21000E0000003702
@@ -156,6 +194,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.06
     KIA_BMS_DISCHG_PWR: 0.46
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 4.6
   response: |-
     7DC10126201019693F9
     7DC21FFE40006002E01
