--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: -0.5
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
+    KIA_HVAC_IAT: 0
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: -0.5
     KIA_TEMP_INT: 0
     KIA_VSS: 0
@@ -12,6 +18,12 @@ test_cases:
     7BB249441C8FFFF0077
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 0.5
+    KIA_HVAC_EVAPORATOR_T: 0
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 84
+    KIA_HVAC_IAT: 1.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 0.5
     KIA_TEMP_INT: 1.5
     KIA_VSS: 0
@@ -23,6 +35,12 @@ test_cases:
     7BB2494542EFFFF0071
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 10.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 52
+    KIA_HVAC_IAT: 10.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 10.5
     KIA_TEMP_INT: 10.5
     KIA_VSS: 0
@@ -34,6 +52,12 @@ test_cases:
     7BB240F342DFFFF0073
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 10
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 25
+    KIA_HVAC_IAT: 11
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 10
     KIA_TEMP_INT: 11
     KIA_VSS: 0
@@ -45,6 +69,12 @@ test_cases:
     7BB244E192EFFFF0050
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: -0.5
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 90
+    KIA_HVAC_IAT: 14.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: -0.5
     KIA_TEMP_INT: 14.5
     KIA_VSS: 0
@@ -56,6 +86,12 @@ test_cases:
     7BB24945A66FFFF00A2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 9.5
+    KIA_HVAC_EVAPORATOR_T: 1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 20
+    KIA_HVAC_IAT: 14.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 9.5
     KIA_TEMP_INT: 14.5
     KIA_VSS: 0
@@ -67,6 +103,12 @@ test_cases:
     7BB24CA14C9FFFF0086
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 9.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 39
+    KIA_HVAC_IAT: 16.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 9.5
     KIA_TEMP_INT: 16.5
     KIA_VSS: 16
@@ -78,6 +120,12 @@ test_cases:
     7BB249427EFFFFF10CA
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 11.5
+    KIA_HVAC_EVAPORATOR_T: 17
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 45
+    KIA_HVAC_IAT: 16.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 11.5
     KIA_TEMP_INT: 16.5
     KIA_VSS: 0
@@ -89,6 +137,12 @@ test_cases:
     7BB240D2DD3FFFF00AD
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 14
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 64
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14
     KIA_TEMP_INT: 18.5
     KIA_VSS: 17
@@ -100,6 +154,12 @@ test_cases:
     7BB240F40F5FFFF11B5
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 17.5
+    KIA_HVAC_EVAPORATOR_T: 1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 49
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17.5
     KIA_TEMP_INT: 18.5
     KIA_VSS: 0
@@ -111,6 +171,12 @@ test_cases:
     7BB240C31C9FFFF0087
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 17.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 47
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17.5
     KIA_TEMP_INT: 19
     KIA_VSS: 7
@@ -122,6 +188,12 @@ test_cases:
     7BB240B2FC9FFFF0798
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 19.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 46
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 19.5
     KIA_TEMP_INT: 19
     KIA_VSS: 0
@@ -133,6 +205,12 @@ test_cases:
     7BB240C2EF2FFFF0084
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 20.5
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 20.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 72
@@ -144,6 +222,12 @@ test_cases:
     7BB240C2CF2FFFF48AD
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 20.5
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 45
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 20.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 90
@@ -155,6 +239,12 @@ test_cases:
     7BB240C2DF2FFFF5ABC
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 20
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
+    KIA_HVAC_IAT: 21
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 20
     KIA_TEMP_INT: 21
     KIA_VSS: 0
@@ -166,6 +256,12 @@ test_cases:
     7BB240F3326FFFF00A9
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 30
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
+    KIA_HVAC_IAT: 21
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30
     KIA_TEMP_INT: 21
     KIA_VSS: 0
@@ -177,6 +273,12 @@ test_cases:
     7BB240F17F1FFFF00BE
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 32
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
+    KIA_HVAC_IAT: 21
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32
     KIA_TEMP_INT: 21
     KIA_VSS: 0
@@ -188,6 +290,12 @@ test_cases:
     7BB240F0EF2FFFF00C5
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 21.5
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
+    KIA_HVAC_IAT: 22
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 21.5
     KIA_TEMP_INT: 22
     KIA_VSS: 0
@@ -199,6 +307,12 @@ test_cases:
     7BB240C22F2FFFF00C7
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 22
+    KIA_HVAC_EVAPORATOR_T: 20
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22
     KIA_TEMP_INT: 24.5
     KIA_VSS: 72
@@ -210,6 +324,12 @@ test_cases:
     7BB240F1FC4FFFF48A2
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 24
+    KIA_HVAC_EVAPORATOR_T: -0.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 24
     KIA_TEMP_INT: 24.5
     KIA_VSS: 96
@@ -221,6 +341,12 @@ test_cases:
     7BB240F1ED8FFFF60C1
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 29.5
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 24
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29.5
     KIA_TEMP_INT: 24.5
     KIA_VSS: 0
@@ -232,6 +358,12 @@ test_cases:
     7BB240C18F2FFFF00C8
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 15.5
+    KIA_HVAC_EVAPORATOR_T: 32
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 61
+    KIA_HVAC_IAT: 25
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 15.5
     KIA_TEMP_INT: 25
     KIA_VSS: 0
@@ -243,6 +375,12 @@ test_cases:
     7BB240F3D2BFFFF00CA
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 31.5
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
+    KIA_HVAC_IAT: 25.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31.5
     KIA_TEMP_INT: 25.5
     KIA_VSS: 182
@@ -254,6 +392,12 @@ test_cases:
     7BB240C22F2FFFFB6C2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 22
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
+    KIA_HVAC_IAT: 26
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22
     KIA_TEMP_INT: 26
     KIA_VSS: 4
@@ -265,6 +409,12 @@ test_cases:
     7BB240F0EF0FFFF04C3
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 19
+    KIA_HVAC_EVAPORATOR_T: 18.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 0
+    KIA_HVAC_IAT: 26.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 19
     KIA_TEMP_INT: 26.5
     KIA_VSS: 0
@@ -276,6 +426,12 @@ test_cases:
     7BB240F00B0FFFF00BD
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 12
+    KIA_HVAC_EVAPORATOR_T: 27
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 41
+    KIA_HVAC_IAT: 29.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12
     KIA_TEMP_INT: 29.5
     KIA_VSS: 1
@@ -287,6 +443,12 @@ test_cases:
     7BB240D29DBFFFF01D8
     7BB25FF00FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 23
+    KIA_HVAC_EVAPORATOR_T: 12.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
+    KIA_HVAC_IAT: 29.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23
     KIA_TEMP_INT: 29.5
     KIA_VSS: 0
@@ -298,6 +460,12 @@ test_cases:
     7BB240C22EFFFFF00C7
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 29
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
+    KIA_HVAC_IAT: 31
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29
     KIA_TEMP_INT: 31
     KIA_VSS: 120
@@ -309,6 +477,12 @@ test_cases:
     7BB24F01EF2FFFF78C7
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 29.5
+    KIA_HVAC_EVAPORATOR_T: 17.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 15
+    KIA_HVAC_IAT: 31.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29.5
     KIA_TEMP_INT: 31.5
     KIA_VSS: 0
@@ -320,6 +494,12 @@ test_cases:
     7BB240C0FF2FFFF00C2
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 40.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
+    KIA_HVAC_IAT: 31.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 40.5
     KIA_TEMP_INT: 31.5
     KIA_VSS: 53
@@ -331,6 +511,12 @@ test_cases:
     7BB240F0BD0FFFF35B8
     7BB25FF01FF00000000
 - expected_values:
+    KIA_HVAC_AAT: 22
+    KIA_HVAC_EVAPORATOR_T: 14.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 13
+    KIA_HVAC_IAT: 48
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22
     KIA_TEMP_INT: 48
     KIA_VSS: 0
