--- a/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
@@ -4,6 +4,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.02
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 31.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201014A5EFF
     7DC21003F0002000000
@@ -12,6 +14,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 13.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101505B00
     7DC21001B0000000000
@@ -20,6 +24,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 6.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101525CFF
     7DC21000D0000000000
@@ -28,6 +34,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101575EFF
     7DC21FFF80000000000
@@ -36,6 +44,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 5.12
     KIA_BMS_SOC: 1.5
+    KIA_MDPS_MOTOR_CURRENT: 17
+    KIA_WHEEL_ANGLE_ABS: 51.2
   response: |-
     7DC1012620101585FFA
     7DC2100030000020000
@@ -44,6 +54,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 0
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201015D6200
     7DC2100000000000000
@@ -52,6 +64,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 0
+    KIA_MDPS_MOTOR_CURRENT: 17
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101606500
     7DC2100000000000000
@@ -60,6 +74,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.23
     KIA_BMS_DISCHG_PWR: 0.48
     KIA_BMS_SOC: 10
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 4.8
   response: |-
     7DC1012620101777501
     7DC210014FFF3003001
@@ -68,6 +84,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 627.23
     KIA_BMS_DISCHG_PWR: 143.36
     KIA_BMS_SOC: 39.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 1433.6
   response: |-
     7DC10126201017777E9
     7DC21FB4FF503380000
@@ -76,6 +94,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.11
     KIA_BMS_DISCHG_PWR: 653.27
     KIA_BMS_SOC: 4
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -20.9
   response: |-
     7DC1012620101787503
     7DC210008000BFF2F01
@@ -84,6 +104,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 654.39
     KIA_BMS_DISCHG_PWR: 653.49
     KIA_BMS_SOC: 4
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -18.7
   response: |-
     7DC10126201017A7703
     7DC210008FF9FFF4502
@@ -92,6 +114,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 43.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017B0000
     7DC2100570000000000
@@ -100,6 +124,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.24
     KIA_BMS_DISCHG_PWR: 1.31
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 13.1
   response: |-
     7DC1012620101807C01
     7DC21FFFDFFF4008305
@@ -108,6 +134,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 5.33
     KIA_BMS_DISCHG_PWR: 0.27
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 2.7
   response: |-
     7DC1012620101807CF3
     7DC21FDFD0215001B00
@@ -116,6 +144,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 48
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201018C8A00
     7DC21FF600000000000
@@ -124,6 +154,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 654.29
     KIA_BMS_SOC: 24
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -10.7
   response: |-
     7DC10126201018F8B10
     7DC2100300000FF9505
@@ -132,6 +164,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101918F00
     7DC21FFE70000000000
@@ -140,6 +174,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 8.93
     KIA_BMS_DISCHG_PWR: 614.4
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -409.6
   response: |-
     7DC1012620101999610
     7DC21FAD5037DF00000
