--- a/tests/test_cases/2021/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2021/commands/7D4.7DC.220101.yaml
@@ -4,6 +4,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101716F00
     7DC21FFF20000000000
@@ -12,6 +14,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 0
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017B0000
     7DC2100000000000000
@@ -20,6 +24,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 628.53
     KIA_BMS_DISCHG_PWR: 212.49
     KIA_BMS_SOC: 23.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 2124.9
   response: |-
     7DC10126201018A89E3
     7DC21F32FF585530100
@@ -28,6 +34,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 653.27
     KIA_BMS_SOC: 20.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -20.9
   response: |-
     7DC10126201018B890A
     7DC2100290000FF2F01
@@ -36,6 +44,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 654.92
     KIA_BMS_DISCHG_PWR: 8.36
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 83.6
   response: |-
     7DC10126201018B89F1
     7DC21FFE4FFD4034402
@@ -44,6 +54,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.31
     KIA_BMS_DISCHG_PWR: 235.53
     KIA_BMS_SOC: 94.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 2355.3
   response: |-
     7DC10126201018C87DB
     7DC21F0BDFFFB5C0100
@@ -52,6 +64,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 46.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201018E8AFF
     7DC21005D0000000000
@@ -60,6 +74,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 2.13
     KIA_BMS_DISCHG_PWR: 650.47
     KIA_BMS_SOC: 34
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -48.9
   response: |-
     7DC10126201018E8B0D
     7DC21004400D5FE1700
@@ -68,6 +84,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.03
     KIA_BMS_DISCHG_PWR: 650.95
     KIA_BMS_SOC: 59
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -44.1
   response: |-
     7DC10126201018E8C0A
     7DC210076FFDFFE4702
@@ -76,6 +94,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.09
     KIA_BMS_DISCHG_PWR: 653.62
     KIA_BMS_SOC: 20
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -17.4
   response: |-
     7DC10126201018E8C10
     7DC2100280009FF5203
@@ -84,6 +104,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.02
     KIA_BMS_DISCHG_PWR: 651.29
     KIA_BMS_SOC: 13.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -40.7
   response: |-
     7DC10126201018F8DFD
     7DC21001B0002FE6904
@@ -92,6 +114,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.08
     KIA_BMS_DISCHG_PWR: 5.69
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 56.9
   response: |-
     7DC1012620101908BF1
     7DC21FFF2FFE4023902
@@ -100,6 +124,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 7
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101908E00
     7DC21000E0000000000
