--- a/tests/test_cases/2023/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: 16.5
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 46
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 16.5
     KIA_TEMP_INT: 18.5
     KIA_VSS: 71
@@ -12,6 +18,12 @@ test_cases:
     7BB240E2EC7FFFF47A4
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 16.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 50
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 16.5
     KIA_TEMP_INT: 18.5
     KIA_VSS: 30
@@ -23,6 +35,12 @@ test_cases:
     7BB240E32C7FFFF1E9C
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 14.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14.5
     KIA_TEMP_INT: 19
     KIA_VSS: 0
@@ -34,6 +52,12 @@ test_cases:
     7BB240E39C6FFFF00A6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 14.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 0
@@ -45,6 +69,12 @@ test_cases:
     7BB240E39C6FFFF00A0
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 14.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 0
@@ -56,6 +86,12 @@ test_cases:
     7BB240E3BC6FFFF009D
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 17
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 38
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17
     KIA_TEMP_INT: 19.5
     KIA_VSS: 45
@@ -67,6 +103,12 @@ test_cases:
     7BB240E26C6FFFF2DA9
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 17.5
+    KIA_HVAC_EVAPORATOR_T: 6
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 38
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 0
@@ -78,6 +120,12 @@ test_cases:
     7BB240E26C6FFFF00A9
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 19.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 29
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 19.5
     KIA_TEMP_INT: 19.5
     KIA_VSS: 16
@@ -89,6 +137,12 @@ test_cases:
     7BB240E1DEFFFFF1072
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 23
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 46
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23
     KIA_TEMP_INT: 19.5
     KIA_VSS: 28
@@ -100,6 +154,12 @@ test_cases:
     7BB24572EF2FFFF1C8D
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 11.5
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 20.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 11.5
     KIA_TEMP_INT: 20.5
     KIA_VSS: 0
@@ -111,6 +171,12 @@ test_cases:
     7BB245739C7FFFF009A
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 56
+    KIA_HVAC_IAT: 20.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 20.5
     KIA_VSS: 0
@@ -122,6 +188,12 @@ test_cases:
     7BB245738C6FFFF009D
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 15
+    KIA_HVAC_EVAPORATOR_T: 14
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
+    KIA_HVAC_IAT: 20.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 15
     KIA_TEMP_INT: 20.5
     KIA_VSS: 60
@@ -133,6 +205,12 @@ test_cases:
     7BB240E41B8FFFF3CB0
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 7
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 56
+    KIA_HVAC_IAT: 21
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 21
     KIA_VSS: 0
@@ -144,6 +222,12 @@ test_cases:
     7BB245738C6FFFF0088
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 15
+    KIA_HVAC_EVAPORATOR_T: 15
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 78
+    KIA_HVAC_IAT: 21.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 15
     KIA_TEMP_INT: 21.5
     KIA_VSS: 41
@@ -155,6 +239,12 @@ test_cases:
     7BB240E4EB8FFFF29AE
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 16
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
+    KIA_HVAC_IAT: 21.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 16
     KIA_TEMP_INT: 21.5
     KIA_VSS: 31
@@ -166,6 +256,12 @@ test_cases:
     7BB240E28C6FFFF1FAD
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 16.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 16.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 84
@@ -177,6 +273,12 @@ test_cases:
     7BB24632CEFFFFF54AD
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 42
+    KIA_HVAC_IAT: 24
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 24
     KIA_VSS: 44
@@ -188,6 +290,12 @@ test_cases:
     7BB24572AC6FFFF2CAE
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 16.5
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
+    KIA_HVAC_IAT: 25.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 16.5
     KIA_TEMP_INT: 25.5
     KIA_VSS: 0
@@ -199,6 +307,12 @@ test_cases:
     7BB24A60EF1FFFF00B0
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 23.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
+    KIA_HVAC_IAT: 27.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23.5
     KIA_TEMP_INT: 27.5
     KIA_VSS: 61
@@ -210,6 +324,12 @@ test_cases:
     7BB240E0EEFFFFF3DB0
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 25
+    KIA_HVAC_EVAPORATOR_T: 6.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 30
+    KIA_HVAC_IAT: 27.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 25
     KIA_TEMP_INT: 27.5
     KIA_VSS: 0
@@ -221,6 +341,12 @@ test_cases:
     7BB240E1EEFFFFF00AE
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 29
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
+    KIA_HVAC_IAT: 28
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29
     KIA_TEMP_INT: 28
     KIA_VSS: 0
@@ -232,6 +358,12 @@ test_cases:
     7BB240E09F0FFFF00B1
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 25
+    KIA_HVAC_EVAPORATOR_T: 16
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 50
+    KIA_HVAC_IAT: 28.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 25
     KIA_TEMP_INT: 28.5
     KIA_VSS: 34
@@ -243,6 +375,12 @@ test_cases:
     7BB240E32F0FFFF22AD
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 25
+    KIA_HVAC_EVAPORATOR_T: 19.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 51
+    KIA_HVAC_IAT: 28.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 25
     KIA_TEMP_INT: 28.5
     KIA_VSS: 60
@@ -254,6 +392,12 @@ test_cases:
     7BB240E33F0FFFF3CB1
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 18.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 36
+    KIA_HVAC_IAT: 29
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 18.5
     KIA_TEMP_INT: 29
     KIA_VSS: 149
@@ -265,6 +409,12 @@ test_cases:
     7BB246324F0FFFF95B4
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 21.5
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
+    KIA_HVAC_IAT: 31
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 21.5
     KIA_TEMP_INT: 31
     KIA_VSS: 67
@@ -276,6 +426,12 @@ test_cases:
     7BB240E0BF0FFFF43B2
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 31
+    KIA_HVAC_EVAPORATOR_T: 7
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
+    KIA_HVAC_IAT: 31.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31
     KIA_TEMP_INT: 31.5
     KIA_VSS: 106
@@ -287,6 +443,12 @@ test_cases:
     7BB240E23F2FFFF6AB6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 34
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 27
+    KIA_HVAC_IAT: 31.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 34
     KIA_TEMP_INT: 31.5
     KIA_VSS: 0
@@ -298,6 +460,12 @@ test_cases:
     7BB24571BF2FFFF00AE
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 22
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 10
+    KIA_HVAC_IAT: 32
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22
     KIA_TEMP_INT: 32
     KIA_VSS: 12
@@ -309,6 +477,12 @@ test_cases:
     7BB240E0AF0FFFF0CAE
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 23.5
+    KIA_HVAC_EVAPORATOR_T: 26
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 26
+    KIA_HVAC_IAT: 34
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23.5
     KIA_TEMP_INT: 34
     KIA_VSS: 62
@@ -320,6 +494,12 @@ test_cases:
     7BB24631AF2FFFF3EB1
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 27.5
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 11
+    KIA_HVAC_IAT: 37
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 27.5
     KIA_TEMP_INT: 37
     KIA_VSS: 39
