--- a/tests/test_cases/2023/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2023/commands/7D4.7DC.220101.yaml
@@ -4,6 +4,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101475DFE
     7DC21FFDB0000000000
@@ -12,6 +14,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 3
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201014F55FF
     7DC2100060000000000
@@ -20,6 +24,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 0.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101747100
     7DC2100010000000000
@@ -28,6 +34,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101757300
     7DC21FFF50000000000
@@ -36,6 +44,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101787500
     7DC21FFF20000000000
@@ -44,6 +54,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 0
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017D0000
     7DC2100000000000000
@@ -52,6 +64,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0.31
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 3.1
   response: |-
     7DC1012620101817DFA
     7DC21FFF40000001F01
@@ -60,6 +74,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.32
     KIA_BMS_DISCHG_PWR: 3.03
     KIA_BMS_SOC: 20
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 30.3
   response: |-
     7DC1012620101898301
     7DC210028FFFC012F01
@@ -68,6 +84,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101898600
     7DC21FFF80000000000
@@ -76,6 +94,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 643.19
     KIA_BMS_DISCHG_PWR: 635.1
     KIA_BMS_SOC: 60
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -202.6
   response: |-
     7DC10126201018B8414
     7DC210578FB3FF81600
@@ -84,6 +104,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.16
     KIA_BMS_DISCHG_PWR: 0.64
     KIA_BMS_SOC: 7.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 6.4
   response: |-
     7DC10126201018C8701
     7DC21000FFFEC004002
@@ -92,6 +114,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 1.46
     KIA_BMS_SOC: 1.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 14.6
   response: |-
     7DC10126201018C8809
     7DC2100030000009205
@@ -100,6 +124,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.7
     KIA_BMS_DISCHG_PWR: 654.23
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -11.3
   response: |-
     7DC10126201018C88F9
     7DC21FFF80046FF8F05
@@ -108,6 +134,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.05
     KIA_BMS_DISCHG_PWR: 1.28
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 12.8
   response: |-
     7DC10126201018C89F2
     7DC21FFF6FFE1008004
@@ -116,6 +144,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.34
     KIA_BMS_DISCHG_PWR: 3.29
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 32.9
   response: |-
     7DC1012620101908E00
     7DC21FFF40022014902
@@ -124,6 +154,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 1.58
     KIA_BMS_DISCHG_PWR: 648.47
     KIA_BMS_SOC: 19.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -68.9
   response: |-
     7DC1012620101918E13
     7DC210027009EFD4F03
