--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -1,7 +1,7 @@
 model_year: 2019
 supported_commands_by_ecu:
   "744":
-  - 744.74C.22E003|fc=1:KIA_DC_CHRG_TIME,KIA_HVBAT_CHRG_CNT,KIA_HVBAT_DC_CHRGNG,KIA_HVBAT_SOC_VCMS,KIA_HVBAT_TARGET_CURR,KIA_HVBAT_TARGET_VOLT
+  - 744.74C.22E003|fc=1:KIA_AC_CHARGER_CURRENT,KIA_AC_CHARGING_TIME_AFTER_PLUG_IN,KIA_DC_CHARGER_CURRENT_CAPABILITY,KIA_DC_CHARGING_TIME_AFTER_PLUG_IN,KIA_DC_CHRG_TIME,KIA_HVBAT_AC_CHARGING_COUNTER,KIA_HVBAT_BMS_TARGET_CURRENT,KIA_HVBAT_BMS_TARGET_VOLTAGE,KIA_HVBAT_CHRG_CNT,KIA_HVBAT_CP_DUTY_CYCLE,KIA_HVBAT_CP_VOLTAGE,KIA_HVBAT_DC_CHRGNG,KIA_HVBAT_EV_MAX_CURRENT,KIA_HVBAT_EV_MAX_VOLTAGE,KIA_HVBAT_HV_BATTERY_VOLTAGE,KIA_HVBAT_PD_VOLTAGE,KIA_HVBAT_SOC_VCMS,KIA_HVBAT_TARGET_CURR,KIA_HVBAT_TARGET_VOLT,KIA_VCMS__AC_CHARGING_TIME
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -70,22 +70,22 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   "7E2":
-  - 7E2.7EA.22E004:KIA_VPWR_V3
+  - 7E2.7EA.22E004:KIA_12V_V,KIA_ACCELERATOR_PEDAL_POSITION,KIA_VPWR_V3,KIA_VSS_HD
 unsupported_commands_by_ecu:
   "744":
-  - 744.74C.22E001|fc=1:KIA_DC_CHRG_STATE
+  - 744.74C.22E001|fc=1:KIA_AC_CHRG_STATE,KIA_AUX_BATTERY_VOLTAGE,KIA_DC_CHRG_STATE,KIA_ESTIMATED_CHRG_POWER,KIA_OBC_CHRG_AC_CURRENT,KIA_OBC_CHRG_AC_VOLTAGE,KIA_OBC_CHRG_DC_CURRENT,KIA_OBC_CHRG_DC_VOLTAGE,KIA_OBC_DCHRG_AC_CURRENT,KIA_OBC_DCHRG_DC_CURRENT
   "770":
   - 770.778.22BC05:KIA_HAZARD_SW,KIA_HL_SW
   - 770.778.22BC07:KIA_DEFOG_LIGHT
   - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
   "7B3":
-  - 7B3.7BB.220100|fc=1:KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
+  - 7B3.7BB.220100|fc=1:KIA_HVAC_AAT,KIA_HVAC_EVAPORATOR_T,KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER,KIA_HVAC_IAT,KIA_HVAC_IAT_DRIVER_LEGS_VENT,KIA_HVAC_IAT_DRIVER_VENT,KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
   "7C6":
   - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
   "7D1":
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2,KIA_WHEEL_FL_VSS
   "7D4":
-  - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC
+  - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC,KIA_MDPS_MOTOR_CURRENT,KIA_WHEEL_ANGLE_ABS
   "7E0":
   - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7E8.22ED02:KIA_EOT_V2
@@ -96,7 +96,7 @@ unsupported_commands_by_ecu:
   - 7E2.7EA.2101:KIA_VSS_V2
   "7E4":
   - 7E4.7EC.2104|fc=1:KIA_HVBAT_CMU065_VOLT_V2,KIA_HVBAT_CMU066_VOLT_V2,KIA_HVBAT_CMU067_VOLT_V2,KIA_HVBAT_CMU068_VOLT_V2,KIA_HVBAT_CMU069_VOLT_V2,KIA_HVBAT_CMU070_VOLT_V2,KIA_HVBAT_CMU071_VOLT_V2,KIA_HVBAT_CMU072_VOLT_V2,KIA_HVBAT_CMU073_VOLT_V2,KIA_HVBAT_CMU074_VOLT_V2,KIA_HVBAT_CMU075_VOLT_V2,KIA_HVBAT_CMU076_VOLT_V2,KIA_HVBAT_CMU077_VOLT_V2,KIA_HVBAT_CMU078_VOLT_V2,KIA_HVBAT_CMU079_VOLT_V2,KIA_HVBAT_CMU080_VOLT_V2,KIA_HVBAT_CMU081_VOLT_V2,KIA_HVBAT_CMU082_VOLT_V2,KIA_HVBAT_CMU083_VOLT_V2,KIA_HVBAT_CMU084_VOLT_V2,KIA_HVBAT_CMU085_VOLT_V2,KIA_HVBAT_CMU086_VOLT_V2,KIA_HVBAT_CMU087_VOLT_V2,KIA_HVBAT_CMU088_VOLT_V2,KIA_HVBAT_CMU089_VOLT_V2,KIA_HVBAT_CMU090_VOLT_V2,KIA_HVBAT_CMU091_VOLT_V2,KIA_HVBAT_CMU092_VOLT_V2,KIA_HVBAT_CMU093_VOLT_V2,KIA_HVBAT_CMU094_VOLT_V2,KIA_HVBAT_CMU095_VOLT_V2,KIA_HVBAT_CMU096_VOLT_V2
-  - 7E4.7EC.220101|fc=1:KIA_C_V_MAX,KIA_C_V_MAX_ID,KIA_C_V_MIN,KIA_C_V_MIN_ID,KIA_DRIVE_TIME,KIA_HVBAT_CHARGING,KIA_HVBAT_CHRG_TOT_C,KIA_HVBAT_CHRG_TOT_E,KIA_HVBAT_CURR,KIA_HVBAT_DSCH_TOT_C,KIA_HVBAT_DSCH_TOT_E,KIA_HVBAT_FAN,KIA_HVBAT_FAN_STATUS,KIA_HVBAT_INLET_T,KIA_HVBAT_MOD1_T,KIA_HVBAT_MOD2_T,KIA_HVBAT_MOD3_T,KIA_HVBAT_MOD4_T,KIA_HVBAT_PLUG_NORM,KIA_HVBAT_PLUG_RAPD,KIA_HVBAT_SOC,KIA_HVBAT_T_MAX,KIA_HVBAT_T_MIN,KIA_HVBAT_VDC,KIA_IGN,KIA_INVRT_CV,KIA_ISO_R,KIA_RPM,KIA_VPWR_V2
+  - 7E4.7EC.220101|fc=1:KIA_AUXILLARY_BATTERY_VOLTAGE,KIA_BATTERY_CURRENT,KIA_BATTERY_DC_VOLTAGE,KIA_BATTERY_FAN_FEEDBACK,KIA_BATTERY_FAN_STATUS,KIA_BATTERY_INLET_T,KIA_BATTERY_MAX_T,KIA_BATTERY_MIN_T,KIA_BATTERY_PACK_B01,KIA_BATTERY_PACK_B02,KIA_BATTERY_PACK_B03,KIA_BATTERY_PACK_B04,KIA_BATTERY_PACK_B05,KIA_BMS_IGNITION,KIA_BMS_MAIN_RELAY,KIA_CUMULATIVE_CHARGE_CURRENT,KIA_CUMULATIVE_DISCHARGE_CURRENT,KIA_CUMULATIVE_ENERGY_CHARGED,KIA_CUMULATIVE_ENERGY_DISCHARGED,KIA_C_V_MAX,KIA_C_V_MAX_ID,KIA_C_V_MIN,KIA_C_V_MIN_ID,KIA_DRIVE_MOTOR_SPEED_1,KIA_DRIVE_MOTOR_SPEED_2,KIA_DRIVE_TIME,KIA_HVBAT_CHARGING,KIA_HVBAT_CHRG_TOT_C,KIA_HVBAT_CHRG_TOT_E,KIA_HVBAT_CURR,KIA_HVBAT_DSCH_TOT_C,KIA_HVBAT_DSCH_TOT_E,KIA_HVBAT_FAN,KIA_HVBAT_FAN_STATUS,KIA_HVBAT_INLET_T,KIA_HVBAT_MOD1_T,KIA_HVBAT_MOD2_T,KIA_HVBAT_MOD3_T,KIA_HVBAT_MOD4_T,KIA_HVBAT_PLUG_NORM,KIA_HVBAT_PLUG_RAPD,KIA_HVBAT_SOC,KIA_HVBAT_T_MAX,KIA_HVBAT_T_MIN,KIA_HVBAT_VDC,KIA_HV_CHARGING,KIA_IGN,KIA_INVERTER_CAPACITOR_VOLTAGE,KIA_INVRT_CV,KIA_ISOLATION_RESISTANCE,KIA_ISO_R,KIA_MAXIMUM_CELL_VOLTAGE,KIA_MAXIMUM_CELL_VOLTAGE_NO,KIA_MINIMUM_CELL_VOLTAGE,KIA_MINIMUM_CELL_VOLTAGE_NO,KIA_NORMAL_CHARGE_PORT,KIA_RAPID_CHARGE_PORT,KIA_RPM,KIA_VPWR_V2
   - 7E4.7EC.220102|fc=1:KIA_HVBAT_CMU001_VOLT,KIA_HVBAT_CMU002_VOLT,KIA_HVBAT_CMU003_VOLT,KIA_HVBAT_CMU004_VOLT,KIA_HVBAT_CMU005_VOLT,KIA_HVBAT_CMU006_VOLT,KIA_HVBAT_CMU007_VOLT,KIA_HVBAT_CMU008_VOLT,KIA_HVBAT_CMU009_VOLT,KIA_HVBAT_CMU010_VOLT,KIA_HVBAT_CMU011_VOLT,KIA_HVBAT_CMU012_VOLT,KIA_HVBAT_CMU013_VOLT,KIA_HVBAT_CMU014_VOLT,KIA_HVBAT_CMU015_VOLT,KIA_HVBAT_CMU016_VOLT,KIA_HVBAT_CMU017_VOLT,KIA_HVBAT_CMU018_VOLT,KIA_HVBAT_CMU019_VOLT,KIA_HVBAT_CMU020_VOLT,KIA_HVBAT_CMU021_VOLT,KIA_HVBAT_CMU022_VOLT,KIA_HVBAT_CMU023_VOLT,KIA_HVBAT_CMU024_VOLT,KIA_HVBAT_CMU025_VOLT,KIA_HVBAT_CMU026_VOLT,KIA_HVBAT_CMU027_VOLT,KIA_HVBAT_CMU028_VOLT,KIA_HVBAT_CMU029_VOLT,KIA_HVBAT_CMU030_VOLT,KIA_HVBAT_CMU031_VOLT,KIA_HVBAT_CMU032_VOLT
   - 7E4.7EC.220105|fc=1:KIA_HVBAT_CMU097_VOLT,KIA_HVBAT_CMU098_VOLT,KIA_HVBAT_C_DEV_V,KIA_HVBAT_DET_MAX_ID,KIA_HVBAT_DET_MIN,KIA_HVBAT_DET_MIN_ID,KIA_HVBAT_HTR1_T,KIA_HVBAT_HTR2_T,KIA_HVBAT_SOC_DISP,KIA_HVBAT_SOH,KIA_HVBAT_WH
   - 7E4.7EC.22010B|fc=1:KIA_HVBAT_CMU129_VOLT,KIA_HVBAT_CMU130_VOLT,KIA_HVBAT_CMU131_VOLT,KIA_HVBAT_CMU132_VOLT,KIA_HVBAT_CMU133_VOLT,KIA_HVBAT_CMU134_VOLT,KIA_HVBAT_CMU135_VOLT,KIA_HVBAT_CMU136_VOLT,KIA_HVBAT_CMU137_VOLT,KIA_HVBAT_CMU138_VOLT,KIA_HVBAT_CMU139_VOLT,KIA_HVBAT_CMU140_VOLT,KIA_HVBAT_CMU141_VOLT,KIA_HVBAT_CMU142_VOLT,KIA_HVBAT_CMU143_VOLT,KIA_HVBAT_CMU144_VOLT,KIA_HVBAT_CMU145_VOLT,KIA_HVBAT_CMU146_VOLT,KIA_HVBAT_CMU147_VOLT,KIA_HVBAT_CMU148_VOLT,KIA_HVBAT_CMU149_VOLT,KIA_HVBAT_CMU150_VOLT,KIA_HVBAT_CMU151_VOLT,KIA_HVBAT_CMU152_VOLT,KIA_HVBAT_CMU153_VOLT,KIA_HVBAT_CMU154_VOLT,KIA_HVBAT_CMU155_VOLT,KIA_HVBAT_CMU156_VOLT,KIA_HVBAT_CMU157_VOLT,KIA_HVBAT_CMU158_VOLT,KIA_HVBAT_CMU159_VOLT,KIA_HVBAT_CMU160_VOLT
