--- a/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: 2
+    KIA_HVAC_EVAPORATOR_T: 0
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 85
+    KIA_HVAC_IAT: 3
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 2
     KIA_TEMP_INT: 3
     KIA_VSS: 0
@@ -12,6 +18,12 @@ test_cases:
     7BB24EE552DFFFF0068
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 3
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 94
+    KIA_HVAC_IAT: 3.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 3
     KIA_TEMP_INT: 3.5
     KIA_VSS: 0
@@ -23,6 +35,12 @@ test_cases:
     7BB242D5E2EFFFF0067
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 3
+    KIA_HVAC_EVAPORATOR_T: -0.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 95
+    KIA_HVAC_IAT: 4
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 3
     KIA_TEMP_INT: 4
     KIA_VSS: 0
@@ -34,6 +52,12 @@ test_cases:
     7BB242D5F2DFFFF006E
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 4.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 94
+    KIA_HVAC_IAT: 5.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 4.5
     KIA_TEMP_INT: 5.5
     KIA_VSS: 30
@@ -45,6 +69,12 @@ test_cases:
     7BB242D5EB9FFFF1E78
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 4.5
+    KIA_HVAC_EVAPORATOR_T: 0
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 90
+    KIA_HVAC_IAT: 9
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 4.5
     KIA_TEMP_INT: 9
     KIA_VSS: 0
@@ -56,6 +86,12 @@ test_cases:
     7BB24EE5AB9FFFF0078
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 7.5
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 88
+    KIA_HVAC_IAT: 9
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 7.5
     KIA_TEMP_INT: 9
     KIA_VSS: 0
@@ -67,6 +103,12 @@ test_cases:
     7BB242D582CFFFF006A
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 9.5
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 76
+    KIA_HVAC_IAT: 9
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 9.5
     KIA_TEMP_INT: 9
     KIA_VSS: 0
@@ -78,6 +120,12 @@ test_cases:
     7BB242D4C2CFFFF0059
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 8
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 70
+    KIA_HVAC_IAT: 10
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 8
     KIA_TEMP_INT: 10
     KIA_VSS: 0
@@ -89,6 +137,12 @@ test_cases:
     7BB242D462EFFFF006C
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 11.5
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 12.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 11.5
     KIA_TEMP_INT: 12.5
     KIA_VSS: 0
@@ -100,6 +154,12 @@ test_cases:
     7BB242D392CFFFF0063
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 5.5
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
+    KIA_HVAC_IAT: 16
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 5.5
     KIA_TEMP_INT: 16
     KIA_VSS: 37
@@ -111,6 +171,12 @@ test_cases:
     7BB242D3BD0FFFF2595
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 5.5
+    KIA_HVAC_EVAPORATOR_T: 1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
+    KIA_HVAC_IAT: 18
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 5.5
     KIA_TEMP_INT: 18
     KIA_VSS: 0
@@ -122,6 +188,12 @@ test_cases:
     7BB24EE3BD1FFFF00AC
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 5
+    KIA_HVAC_EVAPORATOR_T: 1
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 58
+    KIA_HVAC_IAT: 18.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 5
     KIA_TEMP_INT: 18.5
     KIA_VSS: 25
@@ -133,6 +205,12 @@ test_cases:
     7BB242D3AD0FFFF19AC
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 57
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 19
     KIA_VSS: 106
@@ -144,6 +222,12 @@ test_cases:
     7BB242D39D4FFFF6AC6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 7
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 69
+    KIA_HVAC_IAT: 22.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 7
     KIA_TEMP_INT: 22.5
     KIA_VSS: 0
@@ -155,6 +239,12 @@ test_cases:
     7BB242D45B6FFFF00CA
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32.5
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 34
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 47
@@ -166,6 +256,12 @@ test_cases:
     7BB240C22EFFFFF2FC7
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32.5
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 33
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 52
@@ -177,6 +273,12 @@ test_cases:
     7BB240C21EFFFFF34CA
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32.5
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 64
@@ -188,6 +290,12 @@ test_cases:
     7BB240C1FEFFFFF40CA
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 14.5
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 70
+    KIA_HVAC_IAT: 24
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14.5
     KIA_TEMP_INT: 24
     KIA_VSS: 17
@@ -199,6 +307,12 @@ test_cases:
     7BB242D46C5FFFF11BE
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 12.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 68
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 12.5
     KIA_TEMP_INT: 24.5
     KIA_VSS: 0
@@ -210,6 +324,12 @@ test_cases:
     7BB242D44F0FFFF00C0
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 14.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
+    KIA_HVAC_IAT: 25.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 14.5
     KIA_TEMP_INT: 25.5
     KIA_VSS: 35
