--- a/tests/test_cases/2022/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,12 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: 17.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 49
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17.5
     KIA_TEMP_INT: 19
     KIA_VSS: 67
@@ -12,6 +18,12 @@ test_cases:
     7BB240B31C5FFFF43A6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 18
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 54
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 18
     KIA_TEMP_INT: 19
     KIA_VSS: 0
@@ -23,6 +35,12 @@ test_cases:
     7BB240B36C5FFFF0096
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 19.5
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 58
+    KIA_HVAC_IAT: 19
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 19.5
     KIA_TEMP_INT: 19
     KIA_VSS: 41
@@ -34,6 +52,12 @@ test_cases:
     7BB240B3AC5FFFF297D
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 29
+    KIA_HVAC_EVAPORATOR_T: 4.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
+    KIA_HVAC_IAT: 19.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29
     KIA_TEMP_INT: 19.5
     KIA_VSS: 7
@@ -45,6 +69,12 @@ test_cases:
     7BB240E17F2FFFF07C8
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 18
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 50
+    KIA_HVAC_IAT: 20.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 18
     KIA_TEMP_INT: 20.5
     KIA_VSS: 55
@@ -56,6 +86,12 @@ test_cases:
     7BB240B322DFFFF378F
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 34
+    KIA_HVAC_EVAPORATOR_T: 1.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 19
+    KIA_HVAC_IAT: 22.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 34
     KIA_TEMP_INT: 22.5
     KIA_VSS: 79
@@ -67,6 +103,12 @@ test_cases:
     7BB240D13EFFFFF4FC1
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 24
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 31
+    KIA_HVAC_IAT: 23
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 24
     KIA_TEMP_INT: 23
     KIA_VSS: 0
@@ -78,6 +120,12 @@ test_cases:
     7BB24501FF1FFFF00C7
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 29
+    KIA_HVAC_IAT: 23
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30
     KIA_TEMP_INT: 23
     KIA_VSS: 141
@@ -89,6 +137,12 @@ test_cases:
     7BB240C1DF2FFFF8DC6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30.5
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 28
+    KIA_HVAC_IAT: 23
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30.5
     KIA_TEMP_INT: 23
     KIA_VSS: 0
@@ -100,6 +154,12 @@ test_cases:
     7BB240D1CF3FFFF00BD
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 23
+    KIA_HVAC_EVAPORATOR_T: 4
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 45
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23
     KIA_TEMP_INT: 23.5
     KIA_VSS: 75
@@ -111,6 +171,12 @@ test_cases:
     7BB240C2DF5FFFF4BA7
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 23
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 56
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 23
     KIA_TEMP_INT: 23.5
     KIA_VSS: 1
@@ -122,6 +188,12 @@ test_cases:
     7BB240B38C6FFFF0179
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 24
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 26
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 24
     KIA_TEMP_INT: 23.5
     KIA_VSS: 0
@@ -133,6 +205,12 @@ test_cases:
     7BB24501AF1FFFF00C3
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32.5
+    KIA_HVAC_EVAPORATOR_T: 6.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 21
+    KIA_HVAC_IAT: 23.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32.5
     KIA_TEMP_INT: 23.5
     KIA_VSS: 16
@@ -144,6 +222,12 @@ test_cases:
     7BB240D15EFFFFF10C8
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 17.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
+    KIA_HVAC_IAT: 24
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 17.5
     KIA_TEMP_INT: 24
     KIA_VSS: 24
@@ -155,6 +239,12 @@ test_cases:
     7BB240B2CF1FFFF18C8
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 22.5
+    KIA_HVAC_EVAPORATOR_T: 5.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 44
+    KIA_HVAC_IAT: 24
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22.5
     KIA_TEMP_INT: 24
     KIA_VSS: 0
@@ -166,6 +256,12 @@ test_cases:
     7BB240C2CF3FFFF00B6
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 22.5
+    KIA_HVAC_EVAPORATOR_T: 5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 41
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 22.5
     KIA_TEMP_INT: 24.5
     KIA_VSS: 0
@@ -177,6 +273,12 @@ test_cases:
     7BB240C29F3FFFF00C9
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 31.5
+    KIA_HVAC_EVAPORATOR_T: 8
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 14
+    KIA_HVAC_IAT: 24.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31.5
     KIA_TEMP_INT: 24.5
     KIA_VSS: 0
@@ -188,6 +290,12 @@ test_cases:
     7BB240C0EF2FFFF00BD
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 29.5
+    KIA_HVAC_EVAPORATOR_T: 3.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 15
+    KIA_HVAC_IAT: 25
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 29.5
     KIA_TEMP_INT: 25
     KIA_VSS: 85
@@ -199,6 +307,12 @@ test_cases:
     7BB240D0FF2FFFF55C6
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30
+    KIA_HVAC_EVAPORATOR_T: 15
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 32
+    KIA_HVAC_IAT: 26
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30
     KIA_TEMP_INT: 26
     KIA_VSS: 0
@@ -210,6 +324,12 @@ test_cases:
     7BB240D20F3FFFF00CA
     7BB25FF00FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 34.5
+    KIA_HVAC_EVAPORATOR_T: 2
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 23
+    KIA_HVAC_IAT: 26
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 34.5
     KIA_TEMP_INT: 26
     KIA_VSS: 95
@@ -221,6 +341,12 @@ test_cases:
     7BB240C17F2FFFF5FC8
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30
+    KIA_HVAC_EVAPORATOR_T: 6.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 13
+    KIA_HVAC_IAT: 26.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30
     KIA_TEMP_INT: 26.5
     KIA_VSS: 36
@@ -232,6 +358,12 @@ test_cases:
     7BB240D0DF2FFFF24CB
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 26
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 40
+    KIA_HVAC_IAT: 27
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 26
     KIA_TEMP_INT: 27
     KIA_VSS: 77
@@ -243,6 +375,12 @@ test_cases:
     7BB240E282BFFFF4DA3
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 8
+    KIA_HVAC_IAT: 27
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32
     KIA_TEMP_INT: 27
     KIA_VSS: 63
@@ -254,6 +392,12 @@ test_cases:
     7BB240C08F2FFFF3FC4
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 27
+    KIA_HVAC_EVAPORATOR_T: 2.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 47
+    KIA_HVAC_IAT: 27.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 27
     KIA_TEMP_INT: 27.5
     KIA_VSS: 0
@@ -265,6 +409,12 @@ test_cases:
     7BB240D2FF2FFFF008F
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 32.5
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 35
+    KIA_HVAC_IAT: 27.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 32.5
     KIA_TEMP_INT: 27.5
     KIA_VSS: 80
@@ -276,6 +426,12 @@ test_cases:
     7BB240D23F1FFFF50D0
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 31
+    KIA_HVAC_EVAPORATOR_T: 7.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
+    KIA_HVAC_IAT: 29
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 31
     KIA_TEMP_INT: 29
     KIA_VSS: 0
@@ -287,6 +443,12 @@ test_cases:
     7BB240C09F2FFFF00C8
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30.5
+    KIA_HVAC_EVAPORATOR_T: 9
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 67
+    KIA_HVAC_IAT: 30.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30.5
     KIA_TEMP_INT: 30.5
     KIA_VSS: 66
@@ -298,6 +460,12 @@ test_cases:
     7BB240C43F2FFFF42BA
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 30.5
+    KIA_HVAC_EVAPORATOR_T: 3
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 22
+    KIA_HVAC_IAT: 31
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 30.5
     KIA_TEMP_INT: 31
     KIA_VSS: 88
@@ -309,6 +477,12 @@ test_cases:
     7BB241216F1FFFF58B7
     7BB25FF01FFAAAAAAAA
 - expected_values:
+    KIA_HVAC_AAT: 35
+    KIA_HVAC_EVAPORATOR_T: 14.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 9
+    KIA_HVAC_IAT: 48.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
     KIA_TEMP_EXT: 35
     KIA_TEMP_INT: 48.5
     KIA_VSS: 40
