--- a/tests/test_cases/2022/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2022/commands/7D4.7DC.220101.yaml
@@ -4,6 +4,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 650.24
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 17
+    KIA_WHEEL_ANGLE_ABS: -51.2
   response: |-
     7DC1012620101696B08
     7DC21FFDB0000FE0000
@@ -12,6 +14,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 6.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101747100
     7DC21000D0000000000
@@ -20,6 +24,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 9.5
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101790000
     7DC2100130000000000
@@ -28,6 +34,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 12.8
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 128
   response: |-
     7DC10126201017A77F6
     7DC21FFE00000050000
@@ -36,6 +44,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 37
+    KIA_MDPS_MOTOR_CURRENT: 0
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201017B78FF
     7DC21FF4A0000000000
@@ -44,6 +54,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 5.75
     KIA_BMS_SOC: 35
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 57.5
   response: |-
     7DC1012620101848000
     7DC2100460000023F02
@@ -52,6 +64,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 655.31
     KIA_BMS_DISCHG_PWR: 0.9
     KIA_BMS_SOC: 40.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 9
   response: |-
     7DC1012620101848000
     7DC210051FFFB005A03
@@ -60,6 +74,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 654.83
     KIA_BMS_DISCHG_PWR: 0.93
     KIA_BMS_SOC: 39.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 9.3
   response: |-
     7DC1012620101858106
     7DC21004FFFCB005D03
@@ -68,6 +84,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201018C8A00
     7DC21FFF90000000000
@@ -76,6 +94,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0.46
     KIA_BMS_DISCHG_PWR: 654.12
     KIA_BMS_SOC: 39
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -12.4
   response: |-
     7DC10126201018D8A00
     7DC21004E002EFF8405
@@ -84,6 +104,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 1.03
     KIA_BMS_SOC: 36.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 10.3
   response: |-
     7DC10126201018E8A00
     7DC2100490000006703
@@ -92,6 +114,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 12.31
     KIA_BMS_DISCHG_PWR: 650.34
     KIA_BMS_SOC: 40.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: -50.2
   response: |-
     7DC10126201018E8AFE
     7DC21FE5104CFFE0A00
@@ -100,6 +124,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 4.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201018E8CFB
     7DC2100090000000000
@@ -108,6 +134,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 28.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC10126201019590FF
     7DC2100390000000000
@@ -116,6 +144,8 @@ test_cases:
     KIA_BMS_CHG_PWR: 0
     KIA_BMS_DISCHG_PWR: 0
     KIA_BMS_SOC: 100
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 0
   response: |-
     7DC1012620101959201
     7DC21FFFA0000000000
