--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -227,10 +227,10 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
   - 7E1.7E9.2201A4:KIA_CLUTCH_1_T,KIA_CLUTCH_2_T,KIA_GEAR_CUR,KIA_GEAR_NXT
   "7E2":
-  - 7E2.7EA.2101:KIA_VSS_V2
+  - 7E2.7EA.2101:KIA_ACCEL_PEDAL_DEPTH,KIA_BRAKES_APPLIED,KIA_BRAKE_LAMP_STATUS,KIA_GEAR_D,KIA_GEAR_N,KIA_GEAR_P,KIA_GEAR_R_V2,KIA_VSS_V2,KIA_VSS_VMCU
   - 7E2.7EA.22E005:KIA_DISCONNECTOR_ACTUATOR_MOTOR_CURRENT,KIA_DISCONNECTOR_DISENGAGE_LAST_TIME,KIA_DISCONNECTOR_END_POINT,KIA_DISCONNECTOR_INVERTER_PWM_DUTY,KIA_DISCONNECTOR_MEET_POINT,KIA_DISCONNECTOR_STROKE_POSITION,KIA_DISCONNECTOR_ZERO_COUNT_OFFSET
   "7E3":
-  - 7E3.7EB.22E001:KIA_HEAT_SINK_T,KIA_IGN_VOLTAGE,KIA_INVERTER_T,KIA_MOTOR_ACTUAL_TORQUE,KIA_MOTOR_PHASE_CURRENT_RMS_,KIA_MOTOR_RPM,KIA_MOTOR_T,KIA_NOMINAL_TORQUE_VALUE
+  - 7E3.7EB.22E001:KIA_HEAT_SINK_T,KIA_IGN_VOLTAGE,KIA_INVERTER_T,KIA_MOTOR_ACTUAL_TORQUE,KIA_MOTOR_PHASE_CURRENT_RMS,KIA_MOTOR_RPM,KIA_MOTOR_T,KIA_NOMINAL_TORQUE_VALUE
   - 7E3.7EB.22E009:KIA_EOP_ACTUAL_SPEED,KIA_EOP_COMMANDED_SPEED,KIA_EOP_CURRENT_DC,KIA_EOP_CURRENT_IQ,KIA_EWP_ACTUAL_ROTATION_SPEED,KIA_EWP_COMMANDED_ROTATION_SPEED,KIA_EWP_CURRENT_DC,KIA_EWP_VOLTAGE_DC
   "7E4":
   - 7E4.7EC.2102|fc=1:KIA_HVBAT_CMU001_VOLT_V2,KIA_HVBAT_CMU002_VOLT_V2,KIA_HVBAT_CMU003_VOLT_V2,KIA_HVBAT_CMU004_VOLT_V2,KIA_HVBAT_CMU005_VOLT_V2,KIA_HVBAT_CMU006_VOLT_V2,KIA_HVBAT_CMU007_VOLT_V2,KIA_HVBAT_CMU008_VOLT_V2,KIA_HVBAT_CMU009_VOLT_V2,KIA_HVBAT_CMU010_VOLT_V2,KIA_HVBAT_CMU011_VOLT_V2,KIA_HVBAT_CMU012_VOLT_V2,KIA_HVBAT_CMU013_VOLT_V2,KIA_HVBAT_CMU014_VOLT_V2,KIA_HVBAT_CMU015_VOLT_V2,KIA_HVBAT_CMU016_VOLT_V2,KIA_HVBAT_CMU017_VOLT_V2,KIA_HVBAT_CMU018_VOLT_V2,KIA_HVBAT_CMU019_VOLT_V2,KIA_HVBAT_CMU020_VOLT_V2,KIA_HVBAT_CMU021_VOLT_V2,KIA_HVBAT_CMU022_VOLT_V2,KIA_HVBAT_CMU023_VOLT_V2,KIA_HVBAT_CMU024_VOLT_V2,KIA_HVBAT_CMU025_VOLT_V2,KIA_HVBAT_CMU026_VOLT_V2,KIA_HVBAT_CMU027_VOLT_V2,KIA_HVBAT_CMU028_VOLT_V2,KIA_HVBAT_CMU029_VOLT_V2,KIA_HVBAT_CMU030_VOLT_V2,KIA_HVBAT_CMU031_VOLT_V2,KIA_HVBAT_CMU032_VOLT_V2
@@ -249,7 +249,7 @@ unsupported_commands_by_ecu:
   - 7E4.7EC.220114:KIA_AC_COMPRESSOR_OPERATION_RPM
   "7E5":
   - 7E5.7ED.22E001:KIA_CHARGE_MODE_AC_MAXIMUM_CURRENT_LIMIT,KIA_CHARGE_MODE_DC_MAXIMUM_CURRENT_LIMIT,KIA_CHARGE_MODE_DC_TARGET_VOLTAGE,KIA_DISCHARGE_MODE_AC_MAXIMUM_CURRENT_LIMIT,KIA_DISCHARGE_MODE_DC_MAXIMUM_CURRENT_LIMIT,KIA_DISCHARGE_MODE_V2L_AC_TARGET_VOLTAGE
-  - 7E5.7ED.22E002:KIA_OBC_AC_CURRENT_A_RMS_,KIA_OBC_AC_CURRENT_B_RMS_,KIA_OBC_AC_FREQUENCY,KIA_OBC_AC_INPUT_CURRENT_SENSOR_A_SIGNAL_VOLTAGE,KIA_OBC_AC_INPUT_CURRENT_SENSOR_B_SIGNAL_VOLTAGE,KIA_OBC_AC_TOTAL_CURRENT_RMS_,KIA_OBC_AC_VOLTAGE_A_RMS_,KIA_OBC_AC_VOLTAGE_B_RMS_,KIA_OBC_DC_CURRENT_A_RMS_,KIA_OBC_DC_CURRENT_B_RMS_,KIA_OBC_DC_CURRENT_TOTAL_RMS_,KIA_OBC_DC_VOLTAGE,KIA_OBC_T_A,KIA_OBC_T_B
+  - 7E5.7ED.22E002:KIA_OBC_AC_CURRENT_A_RMS,KIA_OBC_AC_CURRENT_B_RMS,KIA_OBC_AC_FREQUENCY,KIA_OBC_AC_INPUT_CURRENT_SENSOR_A_SIGNAL_VOLTAGE,KIA_OBC_AC_INPUT_CURRENT_SENSOR_B_SIGNAL_VOLTAGE,KIA_OBC_AC_TOTAL_CURRENT_RMS,KIA_OBC_AC_VOLTAGE_A_RMS,KIA_OBC_AC_VOLTAGE_B_RMS,KIA_OBC_DC_CURRENT_A_RMS,KIA_OBC_DC_CURRENT_B_RMS,KIA_OBC_DC_CURRENT_TOTAL_RMS,KIA_OBC_DC_VOLTAGE,KIA_OBC_T_A,KIA_OBC_T_B
   - 7E5.7ED.22E003:KIA_OBC_CHARGE_MODE_DC_TARGET_CURRENT,KIA_OBC_CHARGE_MODE_DC_TARGET_VOLTAGE
   - 7E5.7ED.22E011:KIA_AUX_BATTERY_CURRENT,KIA_AUX_BATTERY_STATE_OF_CHARGE,KIA_AUX_BATTERY_T,KIA_AUX_BATTERY_VOLTAGE_7E5,KIA_LDC_INPUT_VOLTAGE,KIA_LDC_OUTPUT_CURRENT,KIA_LDC_OUTPUT_VOLTAGE,KIA_LDC_T
   - 7E5.7ED.22E101:KIA_2025_AUX_BATTERY_CURRENT,KIA_2025_AUX_BATTERY_STATE_OF_CHARGE,KIA_2025_AUX_BATTERY_T,KIA_2025_AUX_BATTERY_VOLTAGE,KIA_2025_LDC_INPUT_VOLTAGE,KIA_2025_LDC_OUTPUT_CURRENT,KIA_2025_LDC_OUTPUT_VOLTAGE,KIA_2025_LDC_T
